log
Wed, May 14, 2025  8:38:30 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  8:39:55 AM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'read_file':
sudoku.c:24:9: error: unused variable 'i' [-Werror=unused-variable]
     int i , j;
         ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:19: error: 'Node {aka struct <anonymous>}' has no member named 'j'
         if (j != n->j) {  // Excluir el nodo mismo
                   ^~
sudoku.c:56:72: error: expected expression before ';' token
             Node* adjacent = /* obtener nodo en la fila i, columna j */;
                                                                        ^
sudoku.c:57:13: error: implicit declaration of function 'addToList' [-Werror=implicit-function-declaration]
             addToList(&list, adjacent);
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
417abd5
